<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginManager.LoginScreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/g_r_ekrani"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/etMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/e_ma_l"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etGirişSifre"
        app:layout_constraintEnd_toEndOf="@+id/etGirişSifre" />

    <EditText
        android:id="@+id/etGirişSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="319dp"
        android:ems="10"
        android:hint="@string/fre"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGiris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/g_r"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGirişSifre" />

    <Button
        android:id="@+id/btnKayitOl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:text="@string/kayit_ol"
        app:layout_constraintEnd_toEndOf="@+id/etGirişSifre"
        app:layout_constraintTop_toBottomOf="@+id/etGirişSifre" />
</androidx.constraintlayout.widget.ConstraintLayout>