<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserManager.UserProfile">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="129dp"
        android:layout_height="0dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ad_soyad_profile"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etProfileAdSoyad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etProfileAdSoyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="6dp"
        android:text="@string/_profile"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etProfileSifre"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/etProfileEmail" />

    <EditText
        android:id="@+id/etProfileTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnGuncelle"
        app:layout_constraintEnd_toEndOf="@+id/etProfileSifre"
        app:layout_constraintStart_toStartOf="@+id/etProfileSifre"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnGuncelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="121dp"
        android:text="@string/guncelle_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProfileTel" />

    <EditText
        android:id="@+id/etProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/etProfileAdSoyad"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/telefon"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etProfileTel"
        app:layout_constraintEnd_toEndOf="@+id/etProfileTel"
        app:layout_constraintStart_toStartOf="@+id/etProfileTel"
        app:layout_constraintTop_toBottomOf="@+id/etProfileSifre" />

    <EditText
        android:id="@+id/etProfileSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/etProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="10dp"
        android:text="@string/e_ma_l"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etProfileEmail"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/etProfileAdSoyad" />

</androidx.constraintlayout.widget.ConstraintLayout>