<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="381dp"
        android:layout_height="164dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_simple_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toEndOf="@+id/imageMulk"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.505" />

        <ImageView
            android:id="@+id/imageMulk"
            android:layout_width="119dp"
            android:layout_height="122dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvListBaslik"
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:layout_marginTop="32dp"
            android:text="@string/textview_1"
            android:textColor="@color/color_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/imageMulk"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvListSehir"
            android:layout_width="168dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/textview_2"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toEndOf="@+id/imageMulk"
            app:layout_constraintTop_toBottomOf="@+id/tvListBaslik"
            app:layout_constraintVertical_bias="0.111" />

        <TextView
            android:id="@+id/tvKat"
            android:layout_width="37dp"
            android:layout_height="54dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/floor_color"
            android:filterTouchesWhenObscured="false"
            android:fitsSystemWindows="true"
            android:lineSpacingExtra="8sp"
            android:scrollbarTrackHorizontal="@color/colorPrimary"
            android:shadowColor="@color/color_bold"
            android:soundEffectsEnabled="true"
            android:text="@string/textview_3"
            android:textAlignment="center"
            android:textColor="@color/color_bold"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.605" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/color_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_bold"
            android:text="@string/kat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toEndOf="@+id/tvListSehir"
            app:layout_constraintTop_toTopOf="@+id/tvKat"
            app:layout_constraintVertical_bias="0.628" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>